# Metad-toy

./: .gitignore  AGENTS.md  CMakeLists.txt  CVs_DISTANCE.cu  CVs_Steinhardt.cu  README.md  Steinh_Q.wl  bug  fix_crystallize.cu  fix_crystallize.h  makecommand  mkdocs.yml  zqc_CVs.h  zqc_debug.h
docs/: index.md  index.zh.md
docs/manuals/: CV_List.zh.md  CV_Weight_Chem.zh.md  CVs_Steinhardt.zh.md  User_Manual.zh.md
docs/theory/: Steinhardt_output_dxdydz.wl  Steinhardt_output_theta_phi.wl  Y3_code_output.txt  Y4_code_output.txt  Y6_code_output.txt
include/: fix_crystallize.h  zqc_CVs.h  zqc_CVs_tools.h  zqc_debug.h  zqc_gaussian.h
include/CVsets/: CV_Distance.h  CV_Steinhardt.h  CV_Steinhardt_math.cu  CV_Steinhardt_math.h  CV_Stru_factor.h  CV_Weighted_Chemical_Pair_Order.h  zqc_CVs.h
include/core/: compute_MetaDToy.h  fix_crystallize.h  neigh_hub.h  zqc_DimSet.h  zqc_gaussian.h
include/ml_cvs/: zqc_mlcvs.h
include/utils/: zqc_CVs_tools.h  zqc_debug.h  zqc_switch_function.h
src/: CVs_DISTANCE.cu  CVs_Steinhardt.cu  CVs_Steinhardt_Q3.cu  CVs_Steinhardt_Q4.cu  CVs_Steinhardt_Q6.cu  CVs_tools.cu  DimSet.cu  GH_t0_uniformGrid.cu  fix_crystallize.cu
src/core/: CMakeLists.txt  CVFactory.cu  compute_MetaDToy.cu  fix_crystallize.cu  neigh_hub.cu
src/cvs/: CMakeLists.txt  CV_Weighted_Chemical_Pair_Order.cu  CVs_DISTANCE.cu  CVs_Steinhardt.cu  CVs_Steinhardt_Local.cu  CVs_Steinhardt_Q3.cu  CVs_Steinhardt_Q4.cu  CVs_Steinhardt_Q6.cu  CVs_Strufactor.cu  CVs_Strufactor_chem.cu
src/grids/: CMakeLists.txt  DimSet.cu  GH_t0_uniformGrid.cu  GH_t1_sparseHash.cu
src/ml_cvs/: CMakeLists.txt  mlcvs.cu
src/utils/: CMakeLists.txt  CVs_tools.cu
test/: .in.test-steinhardt.swp  access.py  benchmarking.ThreadsTime.sh  confirm.py  data.argon  in.potential-O2  in.test-steinhardt  in.test-structurefactor  lof_temperature.py  log  monitor.py  onimoto.py  plot_hills.py  run.sh  wrap.sh
test/DISTANCE/: a.txt  in.test-2atoms-self-potential  in.test-2atoms-toys  run.sh
test/DISTANCE/plumed-potential/: COLVAR  bck.0.COLVAR  in.test-2atoms-toys  log.lammps  plot_fes.py  run.sh
test/DISTANCE/potential/: potential.table  potential_generate.py
test/STEINH/Q4/: in.test-steinhardt  log.lammps
test/STEINH/Q4/plumed/: bck.0.colvar  bck.1.colvar  bck.2.colvar  bck.3.colvar  bck.4.colvar  bck.5.colvar  colvar  in.test-2atoms-toys  in.test-steinhardt  log.lammps  run.sh
test/STEINH/Q4/plumed/test-3atoms/: in.test-steinhardt  log.lammps  run.sh
test/potential_testlib/: Al.meam  library.meam
test/test_StruFactor/potential/: LICENSE
test/test_cvset/: HILLS
tools/: plot_hills.py
